@@ -9,3 +9,4 @@
 2024-06-07T10:05:40.722Z |            1.2.0 | dataset values from multiple registered items
 2024-07-26T12:54:45.767Z |            1.3.0 | New params for badge
 2024-10-15T12:45:13.554Z |            1.4.0 | resultList extra class option
+2024-10-15T13:02:34.445Z |            1.4.1 | `wrapper_extra_class` option
